Update documents in main dir

--- a/A11Y.md
+++ b/A11Y.md
@@ -1,1 +1,22 @@
+Perceivability 
+- descriptive alt tags for all images used
+- all text is distinguishable on background (no difficult to see or non-contrastic colours eg white text on dark backgrounds)
+
+Operability
+- all keyboard interactions supported
+- no keyboard traps
+- headers, sections, other structural sematic html tags used eg article for game cards
+- aria labels for icon-only buttons
+- aria modal and dialong for dialog modals
+- no flashing content very quickly
+- error messages auto dismissed after irrelevant (4 seconds) and have alert role
+
+Understandability
+- HTML in English
+- All hyperlinks/buttons have relevant labels
+- All inputs in forms labelled with for and id
+
+Robustness
+- All HTML is parseable (eg different levels of heading tags, using semantic HTML, not using outdated tags)
+- Using buttons and anchors appropriately (buttons for actions, while anchors for switching between pages)
 
